# Shopping-list

./: README.md  pyproject.toml  requirements.txt
auth/handlers/: __init__.py  sign_in_command.py  sign_up_command.py
auth/helpers/: exceptions.py
auth/models/: account.py  storage.py  user.py  users.json
auth/utils/: consts.py  funcs.py
config/: log_config.py  log_config.toml
config/helpers/: type_hint.py
core/: app.py
shop/: __init__.py
shop/handlers/: __init__.py  add_command.py  change_index_command.py  count_command.py  remove_command.py  search_command.py
shop/helpers/: exceptions.py  type_hints.py
shop/models/: __init__.py  products.csv  products.py
shop/utils/: __init__.py  basket.py  consts.py  decorators.py  funcs.py
