[tool.poetry]
name = "01-04-oop - shopping list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "01_04_oop _ shopping list"}]

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "^4.0.1"
flake8 = "^6.0.0"
black = "^23.7.0"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
